fixed some spacing/formatting

--- a/src/app/vehicles/vehicle-detail/vehicle-detail.component.scss
+++ b/src/app/vehicles/vehicle-detail/vehicle-detail.component.scss
@@ -24,7 +24,6 @@
 
 .home-container {
   .card {
-    width: 400px;
     padding: 32px;
     margin-left: auto;
     border-radius: 10px;
